# earth_map

./: .~lock.README.md#  BUGFIX_SUMMARY.md  CLAUDE.md  CMakeLists.txt  COORDINATE_SYSTEM_ARCHITECTURE_PLAN.md  COORDINATE_SYSTEM_IMPLEMENTATION.md  COORDINATOR_INTEGRATION_SUMMARY.md  DESIGN_ISSUE_DUAL_ATLAS.md  INTEGRATION_DESIGN_ISSUES.md  ISSUE_1_RESOLUTION_SUMMARY.md  ISSUE_3_SHADER_RESOLUTION_SUMMARY.md  README.md  SESSION_SUMMARY_2026-01-20.md  TEXTURE_ATLAS_IMPLEMENTATION_SUMMARY.md  TEXTURE_ATLAS_REFACTOR_PLAN.md  TILE_ARCHITECTURE_DISCUSSION.md  TILE_VISIBILITY_FIX.md  WEB_MERCATOR_BOUNDS_FIX.md  claude_report_stage_1.md  coding_standards.md  conanfile.py  coordinate_system_architecture.md  future_plan.md  globe_plan.md  interfaces_issues.md  plan.md
cmake/: EarthMapConfig.cmake.in
dev_docs/: globe_phase_1_report.md  globe_phase_2_fixed_attempt_2_report.md  globe_phase_2_fixed_report.md  globe_phase_2_tiles_management_report.md  globe_phase_2_tiles_update_report.md  globe_phase_3_report.md  globe_phase_5_report.md  mathematics_tiles_fix_report.md  renderer_and_tiles_issues_fix.md  tile_renderer_in_pipeline.md  tile_rendering_architecture_fix.md  why_no_tiles_rendered.md  why_no_tiles_rendered_2.md  why_no_tiles_rendered_3.md  why_no_tiles_rendered_4.md  why_no_tiles_rendered_5.md
examples/: CMakeLists.txt  basic_example.cpp
include/earth_map/: constants.h  earth_map.h
include/earth_map/api/: map_interaction.h
include/earth_map/coordinates/: altitude_reference.h  coordinate_mapper.h  coordinate_spaces.h
include/earth_map/core/: camera_controller.h  earth_map_impl.h  scene_manager.h
include/earth_map/data/: elevation_cache.h  elevation_data.h  elevation_provider.h  hgt_parser.h  srtm_loader.h  tile_cache.h  tile_index.h  tile_loader.h  tile_manager.h
include/earth_map/math/: bounding_box.h  coordinate_system.h  frustum.h  geodetic_calculations.h  projection.h  tile_mathematics.h
include/earth_map/platform/: library_info.h  opengl_context.h
include/earth_map/renderer/: camera.h  elevation_manager.h  globe_mesh.h  lod_manager.h  mini_map_renderer.h  renderer.h  shader_loader.h  tile_renderer.h  tile_texture_manager.h
include/earth_map/renderer/texture_atlas/: gl_upload_queue.h  texture_atlas_manager.h  tile_load_worker_pool.h  tile_texture_coordinator.h
include/earth_map/renderer/tile_pool/: indirection_texture_manager.h  tile_texture_pool.h
src/api/: map_interaction.cpp
src/coordinates/: altitude_reference.cpp  coordinate_mapper.cpp  coordinate_spaces.cpp
src/core/: camera_controller.cpp  earth_map.cpp  earth_map_impl.cpp  scene_manager.cpp
src/data/: elevation_cache.cpp  elevation_data.cpp  elevation_provider.cpp  hgt_parser.cpp  srtm_loader.cpp  tile_cache.cpp  tile_index.cpp  tile_loader.cpp  tile_loader.cpp.full  tile_manager.cpp
src/math/: coordinate_system.cpp  frustum.cpp  geodetic_calculations.cpp  projection.cpp  tile_mathematics.cpp
src/platform/: library_info.cpp
src/renderer/: camera.cpp  elevation_manager.cpp  globe_mesh.cpp  lod_manager.cpp  mini_map_renderer.cpp  renderer.cpp  shader_loader.cpp  tile_renderer.cpp  tile_texture_manager.cpp
src/renderer/texture_atlas/: gl_upload_queue.cpp  texture_atlas_manager.cpp  tile_load_worker_pool.cpp  tile_texture_coordinator.cpp
src/renderer/tile_pool/: indirection_texture_manager.cpp  tile_texture_pool.cpp
src/shaders/: basic.frag  globe.frag  globe.vert  minimap.frag  minimap.vert  tile_atlas.frag  tile_atlas.vert
tests/data/: elevation_cache_test.cpp  elevation_provider_test.cpp  hgt_parser_test.cpp  srtm_loader_test.cpp
tests/integration/: test_camera_input.cpp  test_tile_visibility.cpp
tests/renderer/: elevation_manager_test.cpp
tests/unit/: earth_map_test.cpp  test_camera.cpp  test_coordinate_mapper.cpp  test_coordinate_spaces.cpp  test_gl_upload_queue.cpp  test_globe_mesh.cpp  test_indirection_texture_manager.cpp  test_indirection_window_center.cpp  test_mathematics.cpp  test_shader_tile_coordinates.cpp  test_texture_atlas_manager.cpp  test_tile_bounds_calculation.cpp  test_tile_load_worker_pool.cpp  test_tile_management.cpp  test_tile_texture_coordinator.cpp  test_tile_texture_manager.cpp  test_tile_texture_pool.cpp
tools/: embed_shaders.py
